# Ball-Tracking

./: .gitignore  BallTracking.h  BlurImage.cpp  CMakeLists.txt  CircleDetection.cpp  DetectBall.cpp  DetectBallCV.cpp  DetectBallCV.hpp  HoughCircles.cpp  README.md  Visualize.cpp  clhelp.cpp  counters.cpp  gaussBlur.cl  main.cpp  makeVid.cpp  test-DetectBall.cpp  test-DetectBallCV.cpp  test-Visualize.cpp  toGray.cl  toGray.cpp
Depricated/: HoughCircles.cpp
OpenCLUtilities/: OCL-UtilitiesConfig.cmake
OpenCLUtilities/OpenCL/: cl.hpp
etc/: BallTracking.h.notes
graph/: CandidateGraphModel.xml  LinkedList.cpp  composeGraph-optimized.cpp  composeGraph.cpp  freeGraph.cpp  shortestPath.cpp  test-composeGraph.cpp  test-shortestPath.cpp  timings.txt
ocl/: oclFunctions.cl  oclFunctions.cl~  oclFunctions.cpp  oclFunctions.cpp~  toGray.cl
output/: output.txt
utils/: LinkedList.cpp  counters.h
